--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83_noneautotype</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
