--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,10 @@ spring:
 logging:
   level:
     com.david: debug
+
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
