--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/xdb?serveTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/project?serveTimezone=GMT%2B8
 
   redis:
     host: localhost
